--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-    <title>North | Were Magic is reality</title>
+    <title>North | Were Magic Happens</title>
 </head>
 <body>
     <header class="header">
-        <p>some text</p>
+        <div class="logo-box">
+            <img class="logo" src="./img/logo-white.png" alt="logo-img">
+        </div>
+        <div class="header-content">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">North</span><span class="heading-primary-sub">is where magic happens</span>
+            </h1>
+            <a href="#" class="btn btn-white animated-btn">Discover our tours</a>
+        </div>
+        
     </header>
 </body>
 </html>
