--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo-box">
-            <img class="logo" src="./img/logo-white.png" alt="logo-img">
+        <div class="header__logo-box">
+            <img class="header__logo" src="./img/logo-white.png" alt="logo-img">
         </div>
-        <div class="header-content">
+        <div class="header__content">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">North</span><span class="heading-primary-sub">is where magic happens</span>
+                <span class="heading-primary--main">North</span>
+                <span class="heading-primary--sub">is where magic happens</span>
             </h1>
-            <a href="#" class="btn btn-white animated-btn">Discover our tours</a>
+            <a href="#" class="btn btn--white animated--btn">Discover our tours</a>
         </div>
         
     </header>
