--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="heading-primary--main">North</span>
                 <span class="heading-primary--sub">is where magic happens</span>
             </h1>
-            <a href="#" class="btn btn--white animated--btn">Discover our tours</a>
+            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
         
     </header>
