--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 </div>
             </div>
         </section>
+        <!-- popular tours -->
         <section class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -85,23 +86,97 @@
                 </h2>
             </div>
             <div class="row">
+                <!-- first card -->
                 <div class="col-1-of-3">
                     <div class="card">
-                        <div class="card__side card__side--front">
-                            col-1-of-3
+                        <div class="card__side card__side--front card__side--front-1">
+                            <div class="card__picture card__picture--1">&nbsp;</div>
+                            <div class="card__heading">
+                                <span class="card__heading-span card__heading-span-1">The sea explorer</span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>sleep in cozy hotels</li>
+                                    <li>diffuculty: easy</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            col-1-of-3
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <div class="card__price-title">only</div>
+                                    <div class="card__price-value">$297</div>
+                                </div>
+                                <a href="#" class="btn btn--white">book now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- second card -->
                 <div class="col-1-of-3">
-                    <div class="card">col-1-of-3</div>
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-2">
+                            <div class="card__picture card__picture--2">&nbsp;</div>
+                            <div class="card__heading">
+                                <span class="card__heading-span card__heading-span-2">The forest hiker</span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 day tour</li>
+                                    <li>Up to 40 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>sleep in provided tents</li>
+                                    <li>diffuculty: medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <div class="card__price-title">only</div>
+                                    <div class="card__price-value">$497</div>
+                                </div>
+                                <a href="#" class="btn btn--white">book now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- third card -->
                 <div class="col-1-of-3">
-                    <div class="card">col-1-of-3</div>
-                    
+                    <div class="card">
+                        <div class="card__side card__side--front card__side--front-3">
+                            <div class="card__picture card__picture--3">&nbsp;</div>
+                            <div class="card__heading">
+                                <span class="card__heading-span card__heading-span-3">The forest hiker</span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 day tour</li>
+                                    <li>Up to 60 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>sleep in provided tents</li>
+                                    <li>diffuculty: hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <div class="card__price-title">only</div>
+                                    <div class="card__price-value">$897</div>
+                                </div>
+                                <a href="#" class="btn btn--white">book now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn--green">Discover all Tours</a>
+            </div>
             </div>
         </section>
     </main>
