stories/testmonials section completed

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="card__side card__side--front card__side--front-3">
                             <div class="card__picture card__picture--3">&nbsp;</div>
                             <div class="card__heading">
-                                <span class="card__heading-span card__heading-span-3">The forest hiker</span>
+                                <span class="card__heading-span card__heading-span-3">The snow adventurer</span>
                             </div>
                             <div class="card__details">
                                 <ul>
@@ -177,6 +177,55 @@
             <div class="u-center-text u-margin-top-huge">
                 <a href="#" class="btn btn--green">Discover all Tours</a>
             </div>
+            </div>
+        </section>
+        <!-- section testimonials -->
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                  <source src="img/video.mp4" type="video/mp4">
+                  <source src="img/video.webm" type="video/webm">
+                  Your browser is not supported!
+                </video>
+              </div>      
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    we make people really happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="/img/nat-8.jpg" alt="customer-story" class="story__img">
+                        <figcaption class="story__caption">mary smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">i had the best week ever with my family</h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, maiores.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="/img/nat-9.jpg" alt="customer-story" class="story__img">
+                        <figcaption class="story__caption">john doe</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">a lifetime experience</h3>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, maiores.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
