completed the popup

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="heading-primary--main">North</span>
                 <span class="heading-primary--sub">is where magic happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
     <main>
@@ -98,7 +98,7 @@
             </div>
         </section>
         <!-- popular tours -->
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -129,7 +129,7 @@
                                     <div class="card__price-title">only</div>
                                     <div class="card__price-value">$297</div>
                                 </div>
-                                <a href="#" class="btn btn--white">book now!</a>
+                                <a href="#popup" class="btn btn--white">book now!</a>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                                     <div class="card__price-title">only</div>
                                     <div class="card__price-value">$497</div>
                                 </div>
-                                <a href="#" class="btn btn--white">book now!</a>
+                                <a href="#popup" class="btn btn--white">book now!</a>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                                     <div class="card__price-title">only</div>
                                     <div class="card__price-value">$897</div>
                                 </div>
-                                <a href="#" class="btn btn--white">book now!</a>
+                                <a href="#popup" class="btn btn--white">book now!</a>
                             </div>
                         </div>
                     </div>
@@ -337,6 +337,24 @@
         </div>
       </footer>
       <!--  FOOTER ENDS -->
+      <!-- pop up -->
+      <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+               <img src="img/nat-9.jpg" alt="photo" class="popup__img">
+               <img src="img/nat-8.jpg" alt="photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+              <a href="#section-tours" class="popup__close">&times;</a>
+              <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+              <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+              <div class="popup__text">
+                  <p class="u-margin-bottom-medium">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sapiente placeat perspiciatis nesciunt expedita voluptatibus. Eveniet quibusdam, impedit minus facilis, nesciunt quis eius porro asperiores doloremque saepe quidem esse! Odit pariatur laudantium quidem itaque consequuntur, ipsa hic corrupti neque natus, odio esse beatae laborum commodi exercitationem enim vel rerum animi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae hic vel quae nisi non sit itaque nostrum praesentium magnam doloribus omnis, ullam sint in molestias blanditiis, quod libero dolorem placeat illo, reprehenderit architecto veniam possimus!</p>
+              </div>
+              <a href="#" class="btn btn--green">Book now!</a>
+            </div>      
+        </div>
+      </div>
     <!--  
     <section class="grid-test">
         <div class="row">
