add media queries for base, typography and layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="header__content">
             <h1 class="heading-primary">
                 <span class="heading-primary--main">North</span>
-                <span class="heading-primary--sub">is where magic happens</span>
+                <span class="heading-primary--sub">where magic happens</span>
             </h1>
             <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
