Write media queries for layout, about, tours, stories and booking section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <h3 class="heading-tertiary u-margin-bottom-small">i had the best week ever with my family</h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, maiores.
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Lorem ipsum.
                             
                         </p>
                     </div>
@@ -238,7 +238,7 @@
                         <h3 class="heading-tertiary u-margin-bottom-small">a lifetime experience</h3>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, maiores.
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Lorem ipsum. 
                         </p>
                     </div>
                 </div>
