browser support and last touches

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/icon-font.css">
+    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <title>North | Were Magic Happens</title>
@@ -58,9 +58,23 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                             sizes="(max-width: 56.25em) 20vw, (max-width:37.5em) 30vw, 300px"
+                             alt="photo1" class="composition__photo composition__photo--p1"
+                             src="img/nat-1-large.jpg" >
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                            sizes="(max-width: 56.25em) 20vw, (max-width:37.5em) 30vw, 300px"
+                             src="img/nat-2-large.jpg" 
+                             alt="photo2" class="composition__photo composition__photo--p2">
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                            sizes="(max-width: 56.25em) 20vw, (max-width:37.5em) 30vw, 300px"
+                             alt="photo3" class="composition__photo composition__photo--p3"
+                             src="img/nat-3-large.jpg">
+                        <!-- without responsive setting  
                         <img src="img/nat-1-large.jpg" alt="photo1" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="photo2" class="composition__photo composition__photo--p2">
                         <img src="img/nat-3-large.jpg" alt="photo3" class="composition__photo composition__photo--p3">
+                        -->
                     </div>
                 </div>
             </div>
