--- a/2-Trillo/index.html
+++ b/2-Trillo/index.html
@@ -81,7 +81,94 @@
                 </nav>
 
                 <main class="hotel-view">
-                    hotel view
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                          <img src="img/hotel-1.jpg" alt="hotel-1" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                          <img src="img/hotel-2.jpg" alt="hotel-2" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                          <img src="img/hotel-3.jpg" alt="hotel-3" class="gallery__photo">
+                        </figure>
+                    </div>          
+                    <div class="overview">
+
+                        <h1 class="overview__heading">
+                          Hotel Las Palmas
+                        </h1>
+
+                        <div class="overview__stars">
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                        </div>
+
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                              <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                            </svg>
+                            <button class="btn-inline">Albufeiral, Portugal</button>
+                        </div>
+            
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
+                        </div>               
+                    </div>
+                      <!-- details section -->
+                    <div class="details">
+                        <div class="user-reviews">
+                            user reviews
+                        </div>
+                        <div class="description">
+                            <p class="paragraphs">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Animi nisi dignissimos 
+                                debitis ratione sapiente saepe. 
+                                Accusantium cumque, quas, ut corporis incidunt 
+                                deserunt quae architecto voluptate.
+                            </p>
+                            <p class="paragraphs">
+                                Accusantium cumque, quas, ut corporis incidunt 
+                                deserunt quae architecto voluptate delectus, 
+                                inventore iure aliquid aliquam.
+                            </p>
+                            <ul class="list">
+                                <li class="list__item">Close to beach</li>
+                                <li class="list__item">breakfast included</li>
+                                <li class="list__item">free airport</li>
+                                <li class="list__item">free high speed wifi</li>
+                                <li class="list__item">pets allowed</li>
+                                <li class="list__item">air conditioning & heating</li>
+                                <li class="list__item">perfect for families</li>
+                                <li class="list__item">multi lingual</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lousi and 3 of others recommended this hotel
+                                </p>
+                                <div class="recommend__freinds">
+                                    <img src="img/user-3.jpg" alt="freind-1" class="recommend__photo">
+                                    <img src="img/user-4.jpg" alt="freind-2" class="recommend__photo">
+                                    <img src="img/user-5.jpg" alt="freind-3" class="recommend__photo">
+                                    <img src="img/user-6.jpg" alt="freind-4" class="recommend__photo">
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
                 </main>
             </div>
         </div>
