Final - media queries and responsivness, build process to complete the  project

--- a/2-Trillo/index.html
+++ b/2-Trillo/index.html
@@ -130,18 +130,18 @@
                     </div>
                       <!-- details section -->
                     <div class="details">
-                        <div class="user-reviews">
+                        <!-- <div class="user-reviews">
                             user reviews
-                        </div>
+                        </div> -->
                         <div class="description">
-                            <p class="paragraphs">
+                            <p class="paragraph">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Animi nisi dignissimos 
                                 debitis ratione sapiente saepe. 
                                 Accusantium cumque, quas, ut corporis incidunt 
                                 deserunt quae architecto voluptate.
                             </p>
-                            <p class="paragraphs">
+                            <p class="paragraph">
                                 Accusantium cumque, quas, ut corporis incidunt 
                                 deserunt quae architecto voluptate delectus, 
                                 inventore iure aliquid aliquam.
@@ -168,7 +168,48 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- reviews -->
+                        <figure class="user-reviews">
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="user-1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nic smith</p>
+                                        <p class="review__user-date">feb 24th, 2019</p>
+                                    </div>
+                                    <div class="review__rating">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Fuga doloremque architecto dicta animi.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="user-2" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">John smith</p>
+                                        <p class="review__user-date">april 24th, 2019</p>
+                                    </div>
+                                    <div class="review__rating">9.3</div>
+                                </figcaption>
+                            </figure>
+                            <button class="btn-inline">show all <span>&rarr;</span></button>
+                        </figure>
                     </div>  
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news! we have 4 free rooms for your selected date
+                        </h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book now</span>
+                            <span class="btn__invisible">only 4 rooms left</span>
+                        </button>
+                    </div>
                 </main>
             </div>
         </div>
