--- a/3-Nexter/index.html
+++ b/3-Nexter/index.html
@@ -12,7 +12,9 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        <div class="sidebar">sidebar</div>
+        <div class="sidebar">
+            <button class="nav-btn"></button>
+        </div>
         <header class="header"> haeder </header>
         <div class="realtors">realtors</div>
         <section class="features">
@@ -194,9 +196,19 @@
             <figure class="gallery__item gallery__item--13"><img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img"></figure>
             <figure class="gallery__item gallery__item--14"><img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img"></figure>
         </section>
-        <div class="footer">
-            footer
-        </div>
+        <footer class="footer">
+            <ul class="nav">
+                    <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2020 by Mayow Dev. Feel free to use this project for your own purposes. This does NOT apply if you plan to produce your own course or tutorials based on this project.
+            </p>
+        </footer>
 
     </body>
 </html>
