--- a/3-Nexter/index.html
+++ b/3-Nexter/index.html
@@ -15,8 +15,39 @@
         <div class="sidebar">
             <button class="nav-btn"></button>
         </div>
-        <header class="header"> haeder </header>
-        <div class="realtors">realtors</div>
+        <header class="header"> 
+            <img src="img/logo.png" alt="nexter logo" class="header__logo">
+            <h3 class="heading-3">your own home</h3>
+            <h1 class="heading-1">the ultimate perfsonal freedom</h1>
+            <button class="header__btn btn">view more properties</button>
+            <div class="header__seen-text">as seen on</div>
+            <div class="header__seen-logos">
+                <img src="img/logo-bbc.png" alt="bbc logo">
+                <img src="img/logo-forbes.png" alt="forbes logo">
+                <img src="img/logo-techcrunch.png" alt="techcrunch logo">
+                <img src="img/logo-bi.png" alt="business insdier">
+            </div>
+        </header>
+        <div class="realtors">
+            <h3 class="heading-3">Top 3 Realtors</h3>
+            <div class="realtors__list">
+                <img src="img/realtor-1.jpeg" alt="realtor-1" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Erik feinman</h4>
+                    <p class="realtors__sold">245 houses sold</p>
+                </div>
+                <img src="img/realtor-2.jpeg" alt="realtor-2" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Kim brown</h4>
+                    <p class="realtors__sold">215 houses sold</p>
+                </div>
+                <img src="img/realtor-3.jpeg" alt="realtor-3" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                    <p class="realtors__sold">185 houses sold</p>
+                </div>
+            </div>
+        </div>
         <section class="features">
             <div class="feature">
                 <svg class="feature__icon">
