--- a/1-Natours/index.html
+++ b/1-Natours/index.html
@@ -19,11 +19,10 @@
          <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>01.</span>About Neatours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>02.</span>Your benefits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>03.</span>Popular Tours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>04.</span>Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>05.</span>Book now</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>01.</span>Home</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>02.</span>About</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>03.</span>Portfolio</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>04.</span>Contact</a></li>
             </ul>
         </nav>
     </div>
